--- a/public_html/index.htm
+++ b/public_html/index.htm
@@ -609,7 +609,7 @@
 
 									<div class="portfolio UXDesign UXResearch mix_all col-lg-6" data-cat="UXDesign">
 										<div class="portfolio-wrapper ">
-											<a href="https://drive.google.com/file/d/1AiVk4EhagaP7KfpEYtrgg7xZgLITpbom/view?usp=sharing">
+											<a href="https://drive.google.com/file/d/1AiVk4EhagaP7KfpEYtrgg7xZgLITpbom/view?usp=sharing" target=”_blank”>
 												<img src=" images/sweepstakes/link.png" alt="" loading="lazy" />
 												<h3>Wish Sweepstakes</h3>
 												<h4>Incentives Program Design </h4>
@@ -913,17 +913,14 @@
 											changes and dream big. </p>
 										<br />
 										<p style="font-weight: 600">5. What are you currently up to?</p>
-										<p>I'm working on some interesting ecommerce challenges with my awesome team at
-											Wish.</p>
+										<p>I'm working on some interesting healthcare challenges with my awesome team at
+											Verily (fka Google Life Science).</p>
 
 										<br />
 										<p style="font-weight: 600">6. What do like to do off work?</p>
-										<p>Cuddling with my bunny (and posting on her
-											<a href="https://www.instagram.com/lizathelop/"
-												style="color:#66CC99; float: none; vertical-align: top; margin: 0px">instgram</a>);
+										<p>Cuddling with my kitty; Making ceramics;
 											Playing ukulele;
-											People-watching at coffee shops; Cooking and binge watching Netflix with my
-											boyfriend.
+											People-watching at coffee shops; Reading about cooking, cooking and eating what I have cooked :)
 										</p>
 										<br />
 										<p> <a class="btn" href="images/CV.pdf"> Download My Resume</a> for the
